name:                should-not-typecheck-example
version:             0.1.0.0
synopsis:            Example of using should-not-typecheck
description:         Please see README.md
homepage:            https://github.com/FranklinChen/should-not-typecheck-example
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     ShouldNotTypecheckExample
  build-depends:       base >= 4.7 && < 5

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , should-not-typecheck-example
                     , hspec
                     , should-not-typecheck
                     , deepseq

source-repository head
  type:     git
  location: https://github.com/FranklinChen/should-not-typecheck-example
